# montreal-aqi-api

./: .gitignore  .pre-commit-config.yaml  COPILOT.md  PREK.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: json_contract_v1.md  json_contract_v1.schema.json
montreal_aqi_api/: __init__.py  api.py  cli.py  config.py  pollutants.py  service.py  station.py
montreal_aqi_api/_internal/: parsing.py  utils.py
src/montreal_aqi_api/: api.py  main.py
src/montreal_aqi_api/_internal/: calculations.py  parsing.py  pollutants.py  utils.py
tests/: _schemas.py  test_api.py  test_api_errors.py  test_calculations.py  test_cli.py  test_json_contract.py  test_parsing.py  test_pollutants.py  test_service.py  test_station.py  test_utils.py
