[project]
name = "montreal_aqi_api"
version = "0.1.0"
description = "CLI and Python API to fetch and process air quality index (AQI) data from the Montreal open data portal."
authors = [
    { name = "Normand Cyr", email = "norm@normandcyr.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "requests>=2.28"
]

[project.urls]
Homepage = "https://github.com/normcyr/montreal-aqi-api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/montreal_aqi_api"]

[project.scripts]
montreal-aqi = "montreal_aqi_api.main:main"