[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montreal_aqi_api"
version = "0.3.3"
description = "CLI and Python API to fetch and process air quality index (AQI) data from the Montreal open data portal."
authors = [
    { name = "Normand Cyr", email = "norm@normandcyr.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-requests",
    "black",
    "pytest"
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/normcyr/montreal-aqi-api"
Source = "https://github.com/normcyr/montreal-aqi-api"
Issues = "https://github.com/normcyr/montreal-aqi-api/issues"

[tool.setuptools.packages.find]
where = [""]

[project.scripts]
montreal-aqi = "montreal_aqi_api.cli:main"